--- a/week3jumbotronhw/index.html
+++ b/week3jumbotronhw/index.html
@@ -17,26 +17,25 @@
     <header>
         <nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Coffee OnUs</a>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav d-flex flex-row">
+                <li class="nav-item">
+                    <a class="nav-link" href="www.facebook.com">Facebook</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="www.twitter.com">Twitter</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Facebook <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="www.instagram.com">Instagram</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Twitter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Instagram</a>
-                </li>
-
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="jumbotron jumbotron-fluid text-white" style="background-image: url(coffeejumbotron.jpg);">
+        <section class="jumbotron jumbotron-fluid text-black" style="background-image: url(coffeejumbotron.jpg);">
             <div class="container">
-                <h1 class="display-1 text-center text-lg-left mb-5 mb-lg-3">Coffee OnUs</h1>
-                <p class="lead bg-transparent p-3 mx-n3">We strive to bring you the purest coffee on the planet.</p>
+                <h1 class="display-1 text-lg-left mb-5 mx-lg-3">Coffee OnUs</h1>
+                <p class="lead bg-white text-center w-50 p-0 mx-3">We strive to bring you the purest coffee on the planet.</p>
             </div>
 
         </section>
@@ -48,19 +47,20 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading display-3 mb-5">First featurette heading. <span
-                            class="text-muted">It’ll blow your
-                            mind.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                        euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                        tellus ac cursus commodo.</p>
+                    <h2 class="featurette-heading">Welcome to Coffee OnUs. <span
+                            class="text-muted">Explore our offerings.
+                            </span></h2>
+                    <p class="lead">Fair trade roast percolator con panna pumpkin spice cultivar strong filter. Sweet beans, rich
+                        frappuccino instant eu café au lait affogato milk. Pumpkin spice caffeine single origin kopi-luwak aftertaste
+                        ristretto strong carajillo. Single shot robusta white, crema, latte, cinnamon pumpkin spice affogato
+                        white in filter.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 text-center">
                     <picture>
 
                         <source srcset="coffeelife900.jpg" media="(min-width: 960px)">
-                        <source srcset="" media="(min-width: 768px)">
-                        <img src="" alt="" class="img-fluid">
+                        <source srcset="coffeelife600.jpg" media="(min-width: 768px)">
+                        <img src="coffeelife300.jpg" alt="coffee is life poster" class="img-fluid">
                     </picture>
                 </div>
             </div>
@@ -69,21 +69,25 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for
-                            yourself.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                        euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                        tellus ac cursus commodo.</p>
+                    <h2 class="featurette-heading">See what our customers are saying. <span class="text-muted">It's all good.
+                            </span></h2>
+                    <p class="lead">At crema aromatic affogato flavour qui doppio strong. Flavour filter aged medium macchiato
+                        cup con panna mazagran. Blue mountain bar trifecta that lungo foam fair trade. Spoon flavour plunger pot
+                        breve decaffeinated id single shot café au lait arabica foam blue mountain.
+                        Barista, siphon, organic trifecta, that saucer con panna ristretto acerbic latte java. Java, turkish breve,
+                        french press java siphon, cup robust skinny cup frappuccino that. Organic est, espresso bar robusta sweet strong.
+                        A kopi-luwak strong siphon, shop cinnamon saucer shop arabica wings crema.
+                        Extraction iced flavour galão beans, americano, java saucer barista latte cultivar. Java affogato organic shop
+                        strong frappuccino crema. Rich est cappuccino est grounds wings dripper in percolator steamed. Body lungo mug
+                        irish, aromatic steamed, sugar irish qui cappuccino acerbic.</p>
                 </div>
-                <div class="col-md-5 order-md-1">
+                <div class="col-md-5 order-md-1 text-center">
                     <picture>
 
                         <source srcset="coffeenow900.jpg" media="(min-width: 960px)">
-                        <source srcset="" media="(min-width: 768px)">
-                        <img src="" alt="" class="img-fluid">
+                        <source srcset="coffeenow600.jpg" media="(min-width: 768px)">
+                        <img src="coffeenow300.jpg" alt="coffee get it now" class="img-fluid">
                     </picture>
-                    <title>Placeholder</title>
-
                 </div>
             </div>
 
@@ -91,20 +95,20 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                        euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                        tellus ac cursus commodo.</p>
+                    <h2 class="featurette-heading">Visit us real soon. <span class="text-muted">Or Online.</span></h2>
+                    <p class="lead">Eu, café au lait flavour cream irish espresso redeye, half and half est, café au lait java trifecta
+                        crema brewed. Caramelization at organic, single origin, to go rich sweet, brewed bar robusta plunger pot as,
+                        seasonal dark froth shop java breve. In, breve, crema, wings, extra mug body espresso robust foam cortado iced
+                        strong robusta. Kopi-luwak in filter as that organic instant redeye medium wings steamed carajillo grinder. Qui
+                        caramelization rich bar, in ut body espresso, cup espresso redeye latte aromatic extra cream mazagran id acerbic.</p>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 text-center">
                     <picture>
 
                         <source srcset="coffeeyou900.jpg" media="(min-width: 960px)">
-                        <source srcset="" media="(min-width: 768px)">
-                        <img src="" alt="" class="img-fluid">
+                        <source srcset="coffeeyou600.jpg" media="(min-width: 768px)">
+                        <img src="coffeeyou300.jpg" alt="you need to experience the difference" class="img-fluid">
                     </picture>
-                    <title>Placeholder</title>
-
                 </div>
             </div>
 
@@ -113,48 +117,84 @@
             <!-- /END THE FEATURETTES -->
         </section>
         <div class="container">
+            <h2 class= "menu">Sample Menu</h2>
             <table class="table table-sm table-striped table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col"><strong>Coffee</strong></th>
+                        <th scope="col">Small</th>
+                        <th scope="col">Medium</th>
+                        <th scope="col">Large</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <th scope="row">House Coffee</th>
+                        <td class="text-center">2.50</td>
+                        <td class="text-center">2.75</td>
+                        <td class="text-center">3.00</td>
+                        
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
+                        <th scope="row">Latte</th>
+                        <td class="text-center">3.75</td>
+                        <td class="text-center">4.00</td>
+                        <td class="text-center">4.25</td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <th scope="row">Mocha</th>
+                        <td class="text-center">4.25</td>
+                        <td class="text-center">4.50</td>
+                        <td class="text-center">4.75</td>
                     </tr>
 
                     <tr>
-                        <th scope="row">4</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <th scope="row">Cappuccino</th>
+                        <td class="text-center">3.75</td>
+                        <td class="text-center">4.00</td>
+                        <td class="text-center">4.25</td>
                     </tr>
                     <tr>
-                        <th scope="row">5</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                        <th scope="row">Espresso</th>
+                        <td class="text-center">2.50</td>
+                        <td class="text-center">"</td>
+                        <td class="text-center">"</td>
                     </tr>
                 </tbody>
+                <thead>
+                    <tr>
+                        <th scope="col"><strong>Pastries</strong></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Muffins & Croissants</th>
+                            <td class="text-center">3.50</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                       <tr>
+                           <th scope="row">Bagel with cream cheese</th>
+                        <td class="text-center">3.70</td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Cinnamon Roll</th>
+                        <td class="text-center">4.15</td>
+                        <td></td>
+                        <td></td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Fruit Tart</th>
+                        <td class="text-center">4.30</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                        <tbody>
             </table>
         </div>
     </main>
