added social media to hwweek4
social icons added

--- a/week4/index.html
+++ b/week4/index.html
@@ -24,7 +24,7 @@
 
     <header>
         <nav>
-            <ul><i class="fab fa-facebook-square"> </i>
+            <ul><li class="fab fa-facebook-square"> </li>
                  <i class="fab fa-instagram-square"></i>
                 <i class="fab fa-twitter"></i>
             </ul>
