--- a/week6midterm/page2.html
+++ b/week6midterm/page2.html
@@ -11,34 +11,29 @@
     <title>Poptop</title>
   </head>
   <body>
-    <h1>Lets show you what you can pop on your top</h1>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Poptop</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav nav-tabs mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+              <a class="nav-link" href="page2.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="page3.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="page4.html">Team</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
       </nav>
 </header>
@@ -46,8 +41,8 @@
 <main>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <h1 class="display-4">Welcome to Poptop Products</h1>
+          <p class="lead">Let's make it rain.</p>
         </div>
       </div>
       <section class="container">
@@ -65,9 +60,9 @@
             <div class="col-md-5 text-center">
                 <picture>
 
-                    <source srcset="" media="(min-width: 960px)">
-                    <source srcset="" media="(min-width: 768px)">
-                    <img src="" alt="" class="img-fluid">
+                    <source srcset="avenger.jpg" media="(min-width: 960px)">
+                    <source srcset="avenger.jpg" media="(min-width: 768px)">
+                    <img src="avenger.jpg" alt="" class="img-fluid">
                 </picture>
             </div>
         </div>
@@ -83,9 +78,9 @@
             <div class="col-md-5 order-md-1 text-center">
                 <picture>
 
-                    <source srcset="" media="(min-width: 960px)">
-                    <source srcset="" media="(min-width: 768px)">
-                    <img src="" alt="" class="img-fluid">
+                    <source srcset="yoda.jpg" media="(min-width: 960px)">
+                    <source srcset="yoda.jpg" media="(min-width: 768px)">
+                    <img src="yoda.jpg" alt="" class="img-fluid">
                 </picture>
             </div>
         </div>
@@ -100,9 +95,9 @@
             <div class="col-md-5 text-center">
                 <picture>
 
-                    <source srcset="" media="(min-width: 960px)">
-                    <source srcset="" media="(min-width: 768px)">
-                    <img src="" alt="" class="img-fluid">
+                    <source srcset="brucelee.jpg" media="(min-width: 960px)">
+                    <source srcset="brucelee.jpg" media="(min-width: 768px)">
+                    <img src="brucelee.jpg" alt="" class="img-fluid">
                 </picture>
             </div>
         </div>
@@ -114,3 +109,12 @@
 <footer>
 
 </footer>
+  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+<script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
+  </body>
+  </html>
